# practice-architecture-patterns-with-python

./: .gitignore  pyproject.toml
src/: config.py  main.py
src/classes/domain/: model.py
src/migrations/: env.py
src/migrations/versions/: 7704d7b79101_first.py
src/register/domain/: model.py
src/student/domain/: model.py
src/teacher/domain/: model.py
